--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido al Portafolio de Grupo1 PUCP</h1>
+        <h1>Bienvenido al Portafolio del Grupo 1</h1>
     </header>
 
     <nav>
@@ -63,7 +63,7 @@
 
     <section id="about">
         <h2>Sobre Nosotros</h2>
-        <p>Somos un grupo de estudiantes de la PUCP que trabaja en proyectos innovadores y creativos.</p>
+        <p>Somos un grupo de estudiantes de la diplomatura de estudio en Business Analytics en la PUCP con la propuesta de un caso de negocio asociado a una casa de apuestas.</p>
     </section>
 
     <section id="members">
@@ -72,21 +72,22 @@
             <li>Airton Molina</li>
             <li>Víctor Vilcapoma</li>
             <li>Gerardo Cabrera</li>
-            <li>Vladimir</li>
-            <li>Oscar</li>
-            <li>Ajem</li>
+            <li>Vladimir Jines</li>
+            <li>Oscar Pinedo</li>
+            <li>Ajem Vera</li>
         </ul>
     </section>
 
     <section id="project">
         <h2>Proyecto</h2>
-        <p><strong>Nombre del Proyecto:</strong> Descripción breve del proyecto.</p>
+        <p><strong>Business Case Casa de Apuestas:</strong> Para el 30 de mayo de 2024, el INDICADOR MENSUAL PROMEDIO DE APUESTAS DEPORTIVAS ONLINE POR USUARIO PARA LA EMPRESA XYZ llegó a 4.5 (semáforo amarillo) de manera general en lo que va del año. Se plantea como objetivo que el valor de este indicador llegue a 5 para el 31 de diciembre de 2024 (semáforo verde). Para lograr este objetivo se plantea implementar una estrategia de upselling, en la que por apostar más veces, se les regale apuestas gratis.</p>
+        <p><strong>Detalle:</strong> Se propone realizar bonos por recargas, dando un monto de 100% adicional a inicios del mes (Máximo 50 soles de bono con un fondo promocional de 15,000 soles mensuales) y que solo podrá ser usado durante el mes obtenido y después de realizar 5 apuestas de monto mínimo de 20 soles en el mes anterior. El costo total de la estrategia sería de 105,000 soles en los 7 meses de la estrategia. Al cumplir con el objetivo, se estima que el monto apostado adicional sea 344,831 soles cada mes, logrando un monto apostado de 2,068,989 soles adicionales durante los primeros 6 meses.</p>
         <p>Puedes ver el proyecto en GitHub <a href="https://github.com/Grupo1-PUCP/BUSINESS-CASE" target="_blank">aquí</a>.</p>
     </section>
 
     <section id="contact">
         <h2>Contacto</h2>
-        <p>Correo electrónico: contacto@grupo1-pucp.com</p>
+        <p>Oscar Pinedo - Líder de grupo - oscar.pinedoq@pucp.edu.pe</p>
     </section>
 
     <footer>
@@ -94,3 +95,4 @@
     </footer>
 </body>
 </html>
+
