--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio - Grupo1 PUCP</title>
+
+    <!-- Enlaces a los archivos CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+
+    <!-- Estilos adicionales en línea -->
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -93,6 +99,12 @@
     <footer>
         <p>&copy; 2024 Grupo1 PUCP. Todos los derechos reservados.</p>
     </footer>
+
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
-
