--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
         <a href="#about" class="fade-in">Sobre Nosotros</a>
         <a href="#members" class="fade-in">Integrantes del Grupo 1</a>
         <a href="#project" class="fade-in">Proyecto</a>
-        <a href="#contact" class="fade-in">Contacto</a>
     </nav>
 
     <section id="about">
@@ -109,7 +108,7 @@
     </section>
 
     <section id="images">
-        <h2 class="fade-in">Imágenes del Proyecto</h2>
+        <h2 class="fade-in">Business Case Casa de Apuestas</h2>
         
         <h3 class="fade-in">Nombre del proyecto e integrantes</h3>
         <img src="https://raw.githubusercontent.com/Grupo1-PUCP/BUSINESS-CASE/main/Pantalla%20Inicio.jpg" alt="Pantalla Inicio" class="fade-in">
